# movim_desktop

./: CMakeLists.txt  MainForm.ui.qml  Movim.pro  README.md  main.cpp  main.qml  movim.desktop  qml.qrc
